new spell word added

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,10 +2,13 @@
   "cSpell.words": [
     "devhasibulislam",
     "Hasibul",
+    "opedia",
     "Pinterest",
+    "projectx",
     "signin",
     "tailwindcss",
-    "Talen"
+    "Talen",
+    "volumedb"
   ],
   "[javascript]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
