--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "mongodb": "^6.2.0",
     "next": "14.0.1",
+    "nodemailer": "^6.9.7",
     "react": "^18",
     "react-dom": "^18"
   },
